--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -3,7 +3,15 @@
 one:
   username: MyString
   password: MyString
+  firstname: MyString
+  lastname: MyString
+  email: MyString
+  dob: MyString
 
 two:
   username: MyString
   password: MyString
+  firstname: MyString
+  lastname: MyString
+  email: MyString
+  dob: MyString
