--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -1,7 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  username: MyString
+  password: MyString
+  firstname: MyString
+  lastname: MyString
+  email: MyString
+  dob: MyString
 
 two:
-  name: MyString
+  username: MyString
+  password: MyString
+  firstname: MyString
+  lastname: MyString
+  email: MyString
+  dob: MyString
