--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: sqlite3
-  database: dbijhe4vct3g42
+  adapter: postgresql
+  database: CS305_Project
   pool: 5
   timeout: 5000
